<resources>
    <string name="app_name">MyFinance</string>
    <string name="add_edit_transaction">Add/Edit Transaction</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="title">Title</string>
    <string name="amount">Amount</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="save_transaction">Save Transaction</string>
    <string name="filter_transaction">Filter Transaction</string>
    <string name="reset">Reset</string>
    <string name="filter_by">Filter By</string>
    <string name="transfer">Transfer</string>
    <string name="sort_by">Sort By</string>
    <string name="highest">Highest</string>
    <string name="lowest">Lowest</string>
    <string name="newest">Newest</string>
    <string name="oldest">Oldest</string>
    <string name="category">Category</string>
    <string name="apply">Apply</string>
    <string name="analytics">Analytics</string>
    <string name="no_data_to_display">No data to display</string>
    <string name="expense1">Expense</string>
    <string name="category_breakdown">Category Breakdown</string>
    <string name="account_balance">Account Balance</string>
    <string name="balance_0_00">Balance: $0.00</string>
    <string name="_5000">$5000</string>
    <string name="_1200">$1200</string>
    <string name="spent_0_00_0">Spent: $0.00 / 0</string>
    <string name="spend_frequency">Spend Frequency</string>
    <string name="today">Today</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="recent_transaction">Recent Transaction</string>
    <string name="see_all">See All</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="settings">Settings</string>
    <string name="monthly_budget">Monthly Budget</string>
    <string name="enter_budget">Enter budget</string>
    <string name="currency">Currency</string>
    <string name="save_settings">Save Settings</string>
    <string name="export">Export</string>
    <string name="transaction">Transaction</string>
    <string name="filter_transaction1">Filter Transaction</string>
    <string name="onboarding_animation">Onboarding Animation</string>
    <string name="welcome_to_financeapp">Welcome to FinanceApp</string>
    <string name="track_your_income_and_expenses_effortlessly">Track your income and expenses effortlessly.</string>
    <string name="onboarding_animation2">Onboarding Animation</string>
    <string name="set_your_budget">Set Your Budget</string>
    <string name="plan_your_finances_with_a_customizable_budget">Plan your finances with a customizable budget.</string>
    <string name="onboarding_animation3">Onboarding Animation</string>
    <string name="analyze_your_spending">Analyze Your Spending</string>
    <string name="get_insights_with_detailed_charts_and_reports">Get insights with detailed charts and reports.</string>
</resources>