<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary"
    android:padding="16dp"
    android:scrollbarSize="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Header -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:paddingBottom="12dp"
            android:text="@string/add_edit_transaction"
            android:textColor="@color/text_dark"
            android:textSize="22sp"
            android:textStyle="bold" />

        <!-- Transaction Type -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/input_background"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="12dp"
            >

            <RadioGroup
                android:id="@+id/type_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/income_radio"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/income"
                    android:text="@string/income"
                    android:textColor="#E2474747" />

                <RadioButton
                    android:id="@+id/expense_radio"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/expense_red"
                    android:text="@string/expense"
                    android:textColor="#E2474747" />
            </RadioGroup>
        </LinearLayout>

        <!-- Title -->
        <EditText
            android:id="@+id/title_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/input_background"
            android:hint="@string/title"
            android:inputType="text"
            android:padding="16dp"
            android:textColor="#E2474747"
            android:textColorHint="@color/gray" />

        <!-- Amount -->
        <EditText
            android:id="@+id/amount_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/input_background"
            android:hint="@string/amount"
            android:inputType="numberDecimal"
            android:padding="16dp"
            android:textColor="#E2474747"
            android:textColorHint="@color/gray" />

        <!-- Category Spinner -->
        <Spinner
            android:id="@+id/category_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/input_background"
            android:dropDownWidth="match_parent"
            android:minHeight="48dp"
            android:padding="12dp"
            android:spinnerMode="dialog" />

        <!-- Date -->
        <TextView
            android:id="@+id/date_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/input_background"
            android:padding="16dp"
            android:text="@string/select_date"
            android:textColor="#E2474747"
            android:textStyle="bold" />

        <!-- Time -->
        <TextView
            android:id="@+id/time_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/input_background"
            android:padding="16dp"
            android:text="@string/select_time"
            android:textColor="#E2474747"
            android:textStyle="bold" />

        <!-- Save Button -->
        <Button
            android:id="@+id/save_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_primary_rounded"
            android:backgroundTint="@color/primary_purple"
            android:fontFamily="@font/roboto_bold"
            android:padding="14dp"
            android:text="@string/save_transaction"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>
