<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    android:background="@color/secondary">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/onboarding_animation"
        android:layout_width="280dp"
        android:layout_height="280dp"
        android:contentDescription="@string/onboarding_animation3"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/onboarding_animation_3" />

    <TextView
        android:id="@+id/onboarding_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/analyze_your_spending"
        android:textColor="@color/text_dark"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/onboarding_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:text="@string/get_insights_with_detailed_charts_and_reports"
        android:textColor="@color/gray"
        android:textSize="20sp" />

</LinearLayout>