<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    android:background="@color/secondary">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/onboarding_animation"
        android:layout_width="280dp"
        android:layout_height="280dp"
        app:lottie_rawRes="@raw/onboarding_animation_1"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        android:contentDescription="@string/onboarding_animation" />

    <TextView
        android:id="@+id/onboarding_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/welcome_to_financeapp"
        android:textColor="@color/text_dark"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/onboarding_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:text="@string/track_your_income_and_expenses_effortlessly"
        android:textColor="@color/gray"
        android:textSize="20sp" />

</LinearLayout>